--- a/tours.html
+++ b/tours.html
@@ -95,61 +95,71 @@ http://www.templatemo.com/tm-409-travel
 
                 <div class="row"><!-- second row -->
 
-                  <div class="col-md-4"><!-- first column -->
+                  <div class="col-md-6"><!-- first column -->
                         <div class="widget-item news">
-                            <h4 class="consult-title">Nha Trang - Thành Đô - Cửu Trại Câu 5N5D</h4>
+                            <h4 class="consult-title">
+                                HÀNH TRÌNH KHÁM PHÁ TRUNG QUỐC <br/>
+                                Thượng Hải - Tô Châu - Hàng Châu - Ô Trấn
+                            </h4>
 
                             <div class="sample-thumb">
-                                <img src="images/tours/cuu-trai-cau.jpg" class="thumb-tours" alt="Nha Trang - Thành Đô - Cửu Trại Câu 5N5D" title="Nha Trang - Thành Đô - Cửu Trại Câu 5N5D">
+                                <img src="images/tours/thuong-hai-to-chau-hang-chau.jpg" alt="Thượng Hải - Tô Châu - Hàng Châu - Ô Trấn" title="Thượng Hải - Tô Châu - Hàng Châu - Ô Trấn">
                             </div> <!-- /.sample-thumb -->
 
                             <p>
-                                Đến với đất nước Trung Hoa, du khách không chỉ được khám phá những địa danh nổi tiếng bởi bề dày lịch sử văn hóa, những kì quan thế giới và di tích lịch sử còn được lưu giữ nguyên vẹn đến ngày nay như: Vạn lý trường thành, Tử cấm thành, Lăng mộ Tần Thủy Hoàng… mà còn có cơ hội ghé thăm một danh lam thắng cảnh nổi tiếng ở phía Tây Bắc tỉnh Tứ Xuyên - Trung Quốc, là một vùng đất thần tiên, rất thơ mộng và đầy vẻ hoang sơ, đẹp như tranh vẽ, nổi bật với phong cảnh thiên nhiên hữu tình của những hồ nước đầy màu sắc, những thác nước ngoạn mục và những ngọn núi xanh hùng vĩ.
+                                ⏳ 6 ngày 5 đêm | Khởi hành từ sân bay Cam Ranh
                                 <br><br>
-                                Đó là CỬU TRẠI CÂU, điểm thu hút số lượng lớn khách du lịch ghé thăm suốt mùa quanh năm. Thắng cảnh này được UNESCO công nhận là Di sản thiên nhiên thế giới năm 1992 và được Ủy ban thẩm định chất lượng Du lịch của Trung Quốc công nhận đạt cấp AAAAA (5A - tiêu chí cao nhất) vào năm 2013.
+                                🌟 Đây là chuyến du lịch "hot" nhất năm, được đông đảo khách hàng chờ đợi! Với lịch trình hấp dẫn, dịch vụ chất lượng, đây chắc chắn là lựa chọn hoàn hảo để khởi đầu năm mới hoặc tận hưởng mùa xuân tươi đẹp.
                                 <br><br>
-                                Nhân gian có một câu nói: "Không cần nhìn thấy bất kỳ ngọn núi nào sau khi bạn đến thăm núi Hoàng Sơn, và cũng không cần phải nhìn thấy bất kỳ một dòng nước nào sau khi bạn đến thăm Cửu Trại Câu."
+                                Lịch khởi hành siêu hấp dẫn:<br>
+                                28/12/2024 - 02/01/2025: Đón Tết Dương lịch tại Trung Quốc! (20.900.000 VNĐ)<br>
+                                28/02/2025 - 05/03/2025: Mùa xuân rực rỡ (19.900.000 VNĐ)<br>
+                                26/03/2025 - 31/03/2025: Thời điểm lý tưởng để khám phá (19.900.000 VNĐ)<br>
+                                Tại sao đây là hành trình không thể bỏ lỡ?<br>
+                                ✅ Hãng hàng không số 1 Trung Quốc: Bay cùng China Southern Airlines (CZ).<br>
+                                ✅ Nghỉ dưỡng đẳng cấp: Khách sạn 4 sao, không phải ngủ đêm trên máy bay.<br>
+                                ✅ Hành trình trải nghiệm văn hóa và hiện đại:
+                                <br><br>
+                                Tham quan các danh thắng nổi tiếng: Hàn Sơn Tự, Sư Tử Lâm, Tây Hồ, và phố cổ Ô Trấn.<br>
+                                Dạo bước tại Phố Nam Kinh, ngắm nhìn Tháp truyền hình Đông Phương Minh Châu tại Thượng Hải.<br>
+                                ✅ Mua sắm thỏa thích tại các khu phố sầm uất, lưu lại những món quà đáng nhớ.<br>
+                                🌸 Hãy để chúng tôi đưa bạn đến với những trải nghiệm tuyệt vời nhất tại Trung Quốc!<br>
+                                📞 Liên hệ ngay hôm nay để giữ chỗ cho chuyến đi được mong chờ nhất năm!<br>
                             </p>
                         </div> <!-- /.widget-item -->
                     </div> <!-- /.col-md-4 -->
 
-                    <div class="col-md-4"><!-- second column -->
+                    <div class="col-md-6"><!-- second column -->
                         <div class="widget-item">
-                            <h4 class="consult-title">Nha Trang - Seoul - Herb Island - Sokcho - Seoraksan 5N5D</h4>
+                            <h4 class="consult-title">
+                                HÀNH TRÌNH NHẬT BẢN MÙA HOA ANH ĐÀO 🌸<br>
+                                Osaka - Kyoto - Kobe - Núi Phú Sĩ - Tokyo
+                            </h4>
                             <div class="sample-thumb">
-                                <img src="images/tours/korea.jpg" class="thumb-tours" alt="Nha Trang - Seoul - Herb Island - Sokcho - Seoraksan 5N5D" title="Nha Trang - Seoul - Herb Island - Sokcho - Seoraksan 5N5D">
+                                <img src="images/tours/nha-trang-nhat-ban.jpg" alt="HÀNH TRÌNH NHẬT BẢN MÙA HOA ANH ĐÀO" title="HÀNH TRÌNH NHẬT BẢN MÙA HOA ANH ĐÀO">
                             </div> <!-- /.sample-thumb -->
 
                             <p>
-                                Hành trình Du lịch Hàn Quốc gói gọn trong vòng 5 ngày, 5 đêm với chất lượng dịch vụ khách sạn 3,4 sao và một chương trình tham quan đầyhấp dẫn.
+                                ✈ Khởi hành từ sân bay Cam Ranh
                                 <br><br>
-                                Ngoài các địa danh nổi tiếng tại thủ đô Seoul như Cung điện Gyeongbok, dinh Tổng Thống, làng cổ truyền thống Hanok Nam San, tham gia lớp học làm Kim Chi, shopping tại khu phố MyeongDong sầm uất…
+                                ⏳ Thời gian: 6 ngày 5 đêm (06 - 11/04/2025)<br>
+                                💰 Giá trọn gói: 39.900.000 VND/khách<br>
+                                🎉 Ưu đãi đặc biệt:<br>
+                                👉 Giảm ngay 1.000.000 VND/người cho nhóm 4 người đăng ký trước 45 ngày!
                                 <br><br>
-                                Ngoài ra du khách còn có thời gian tham quan Công viên thảo dược Pocheon Herb Island, chợ cá Sokcho và đặc biệt là Vườn quốc gia Seoraksan, là một trong những vườn quốc gia với núi cao và đẹpnhất của đất nước Hàn Quốc.</p>
-                        </div> <!-- /.widget-item -->
-                    </div> <!-- /.col-md-4 -->
-
-                    <div class="col-md-4"><!-- third column -->
-                        <div class="widget-item">
-                            <h4 class="consult-title" style="font-size: 18px;line-height: 18px;">Nha Trang – TP.HCM – San Francisco – Los Angeles – Las Vegas – San Diego – Tijuana (mexico) (10N9D)</h4>
-
-                            <div class="sample-thumb">
-                                <img src="images/tours/usa.jpg" class="thumb-tours" alt="NHA TRANG – TP.HCM – SAN FRANCISCO – LOS ANGELES – LAS VEGAS – SAN DIEGO – TIJUANA ( MEXICO ) (10N9D)" title="NHA TRANG – TP.HCM – SAN FRANCISCO – LOS ANGELES – LAS VEGAS – SAN DIEGO – TIJUANA ( MEXICO ) (10N9D)">
-                            </div> <!-- /.sample-thumb -->
-
-                            <p>
-                                Nước Mỹ vô cùng rộng lớn với 50 bang, mỗi bang đều có những nét lôi cuốn khác biệt. Từ thành phố sầm uất đến vùng biển lộng gió, từ cảnh quan thiên nhiên đến các địa danh lịch sử, văn hoá, các công trình mang tầm cỡ nhất nhì thế giới..
+                                🏨 Tiêu chuẩn: Khách sạn 4*, bay cùng Vietnam Airlines
                                 <br><br>
-                                Dù lựa chọn điểm đến là bờ Đông hay bờ Tây, đều hứa hẹn sẽ đem đến cho du khách một chuyến du ngoạn khó quên và nhiều thú vị. Tour du lịch bờ Tây nước Mỹ sẽ đưa du khách qua các thành phố du lịch náo nhiệt nhất của bang California và bang Nevada hứa hẹn sẽ đem đến những trải nghiệm đầy thú vị, kích thích những tâm hồn yêu thích khám phá đó là : Thành phố kinh đô giải trí thế giới Las Vegas, nơi du khách có thể tận hưởng cuộc sống về đêm đầy màu sắc;
+                                ĐIỂM NỔI BẬT:
                                 <br><br>
-                                Kinh đô ánh sáng Los Angeles là thành phố tượng trưng cho ngành điện ảnh của nước Mỹ với phim trường Hollywood lừng danh, nơi được lựa chọn làm bối cảnh của hàng loạt các bộ phim bom tấn nổi tiếng;
+                                - Tham quan Osaka - Kyoto - Kobe - Núi Phú Sĩ - Tokyo<br>
+                                - Trải nghiệm tàu cao tốc Shinkansen và tắm Onsen truyền thống<br>
+                                - Thưởng thức đặc sản bò Kobe trứ danh<br>
+                                - Check-in các biểu tượng nổi tiếng: Lâu đài Osaka, chùa Vàng Kinkakuji, làng cổ Oshino Hakkai, tháp Tokyo, và nhiều điểm hấp dẫn khác!
                                 <br><br>
-                                là San Francisco, một trong những thành phố xinh đẹp nằm bên bờ biển California. “Xứ sở sương mù” với cảnh quan thiên nhiên thơ mộng, những tòa nhà cao tầng hiện đại xen kẽ lốikiến trúc cổ điển đã tạo cho San Francisco là một điểm nhấn trong hành trình khám phá bờ Tây…
+                                📞 Đặt tour ngay hôm nay để tận hưởng ưu đãi và chiêm ngưỡng vẻ đẹp hoa anh đào rực rỡ!
                             </p>
                         </div> <!-- /.widget-item -->
                     </div> <!-- /.col-md-4 -->
-
-
 
                 </div> <!-- /.row second -->
 
