--- a/index.html
+++ b/index.html
@@ -97,7 +97,29 @@ http://www.templatemo.com/tm-409-travel
 
                     <div class="col-md-8">
                         <div class="widget-item">
-                            <h3 class="widget-title">Tin tức - Sự kiện</h3>
+                            <h3 class="widget-title hide">Tin tức - Sự kiện</h3>
+
+                            <div class="row news">
+                                <div class="col-md-12"><h4 class="news-title">TẾT THIẾU NHI QUÀ TẶNG MÊ LY, VIETJET THÔI!</h4></div>
+                                <div class="col-md-12">
+                                    <div class="sample-thumb">
+                                        <img src="images/news/vietjet-tet-thieu-nhi-2025.png" alt="TẾT THIẾU NHI QUÀ TẶNG MÊ LY, VIETJET THÔI!">
+                                    </div> <!-- /.sample-thumb -->
+                                </div>
+                                <div class="col-md-12">
+                                    <p>
+                                      1. Thời gian: từ ngày 01/06/2025 đến ngày 30/06/2025.
+                                      <br/><br/>
+                                    </p>
+
+                                    <p>
+                                      2. Hình thức khuyến mãi:
+                                      <br/>
+                                      Tặng ngay suất ăn nóng, tươi ngon bất kỳ cho mỗi hoá đơn mua hàng lưu niệm từ 400.000 VNĐ
+                                      <br/><br/>
+                                    </p>
+                                </div>
+                            </div>
 
                             <div class="row news">
                                 <div class="col-md-12"><h4 class="news-title">MUA VÉ MÁY BAY TẾT ẤT TỴ 2025 CÙNG VIETNAM AIRLINES</h4></div>
