--- a/tours.html
+++ b/tours.html
@@ -92,6 +92,18 @@ http://www.templatemo.com/tm-409-travel
 
         <div class="middle-content">
             <div class="container">
+                <div class="row">
+                  <div class="col-md-6"><!-- first column -->
+                    <div class="widget-item news">
+                      <h4 class="consult-title">
+                        TOUR ĐẢO NHA TRANG
+                      </h4>
+                      <div class="sample-thumb">
+                        <img src="images/tours/tour-dao-nha-trang.jpg" alt="Tour đảo Nha Trang" title="Tour đảo Nha Trang">
+                      </div> <!-- /.sample-thumb -->
+                    </div>
+                  </div>
+                </div>
 
                 <div class="row"><!-- second row -->
 
